# Hector

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: hls_script.sh  resource.json  resource_dynamatic.json
examples/hybrid-tuned/: aeloss_pull.mlir  aeloss_push.mlir
examples/tuned/: aeloss_pull.mlir  aeloss_push.mlir  gemm_ncubed_kernel.mlir  spmv_crs_kernel.mlir  stencil_stencil2d_kernel.mlir  stencil_stencil3d_kernel.mlir
hector-opt/: CMakeLists.txt  hector-opt.cpp
hector-translate/: CMakeLists.txt  hector-translate.cpp
include/: CMakeLists.txt
include/HEC/: CMakeLists.txt  HEC.h  HEC.td  HECDialect.h  HECDialect.td  HECExpr.td  HECGraph.td  HECPipeline.td  HECSTG.td  HECStructure.td  HECTypes.h  HECTypes.td  LLVM.h  PassDetail.h  Passes.h  Passes.td
include/Schedule/: CDFG.h  ResourceDB.h  SDCSchedule.h  SDCSolver.h  ScheduleAlgo.h
include/TOR/: CMakeLists.txt  LLVM.h  PassDetail.h  Passes.h  Passes.td  TOR.h  TOR.td  TORDialect.h  TORDialect.td  TORExpr.td  TORStmt.td  TORTypes.h  TORTypes.td
lib/: CMakeLists.txt
lib/HEC/: CMakeLists.txt  HEC.cpp  HECDialect.cpp  HECDumpChiselPass.cpp  HECDynamicSchedulePass.cpp  HECGenPass.cpp  HECTypes.cpp
lib/Schedule/: CDFG.cpp  CMakeLists.txt  SDCSchedule.cpp  SDCSolver.cpp  ScheduleAlgo.cpp
lib/TOR/: CMakeLists.txt  SCFDump.cpp  SCFToTOR.cpp  TOR.cpp  TORCheckPass.cpp  TORDialect.cpp  TORDump.cpp  TORPipelinePartitionPass.cpp  TORSchedulePass.cpp  TORSplitPass.cpp  TORTypes.cpp  WidthAnalysisPass.cpp
